fix: Arrow alignment

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -61,7 +61,12 @@ nav{
     border-radius:212px;
     box-shadow: 0px 0px 17px 11px  rgba(86, 86, 86, 0.25);;
 }
+.scroll-bar-border{
+    width: 100%;
+    margin-top: 34px;
+    border-top:0.5px #b1aeae solid;
 
+}
 .scroll-bar{
     display: flex;
     margin: auto;
